# old_folders

BradleyNeedham/: strategy2.cpp  strategy5.cpp  strategy7.cpp
BrendanGregg/: guess.c  guess.cpp
BrucePowelDouglass/: sensor3.c
JackGanssle/: debounce3.c  double_promotion.c  integer_promotion.c
JaemannYeh/: set.txt  test.c
Miscellany/: kalman3.c
RogerFerrer/: arm_assembler_in_raspberry_pi.s
SourceMaking/: composite2.cpp  observer2after.cpp  observer2before.cpp  observer5.cpp  observer7.cpp
TomIgoe/: weighted_average_filter.c
airguitar/dat/: common00.tsp
airguitar/prj/lab/: Makefile  Makerule.bse  Makerule.com  lab.c
beys/: Makefile
beys/src/: beys.cpp  beys.h  beys_cli.cpp  main.cpp
beys/tbl/: beys.sql
design_patterns_eplained_simply/behavioral_design_patterns/: command_design_pattern.cpp  interpreter_design_pattern.cpp  iterator_design_pattern.cpp  template_method_design_pattern.cpp
design_patterns_eplained_simply/creational_design_patterns/: singleton_design_pattern.cpp
design_patterns_eplained_simply/structural_design_patterns/: adapter_design_pattern.cpp  bridge_design_pattern.cpp
kwiz/: Makefile  README.md
kwiz/inc/: kwiz.h
kwiz/src/: kwiz_main.cpp  kwiz_version.cpp
my-prj-oe/base/: Makefile  makecfg.mk
my-prj-oe/base/oe_common/: Makefile
nopebts/: .gitignore  Makefile.am  Makefile.common  README.md  configure.ac
nopebts/CommonLibs/: Makefile.am  Reporting.cpp  UnixSignal.cpp
paperplane/doc/: dailylog.txt
paperplane/inc/: pp_base.h
paperplane/prj/tutcyg/: Makefile  Makerule.pp_base  Makerule.pp_class  Makerule.pp_draft  pp_config.h  tutcyg.c  tutcyg.init
paperplane/prj/tutldd/: hello.c
paperplane/prj/tutlin/: Makefile  Makerule.pp_base  Makerule.pp_class  Makerule.pp_draft  pp_config.h  tutlin.c  tutlin.init  tutlin.tag.txt
paperplane/src/pp_base/: pp_base.c  pp_calc.l  pp_calc.y  pp_calc_inc.h  pp_config.c  pp_httpd.c  pp_named_var.c  pp_shared_tag.c  pp_shell.c  pp_shell_stub.c  pp_telnetd.c  pp_thread.c
paperplane/src/pp_class/: pp_class.cpp  pp_class.h
paperplane/src/pp_draft/: udp1k_test.c
peepuhl/: Permutation-Generator.cpp
root_gahyd/: Makefile  helper.cc  helper.h  root_gahyd.proto  root_gahyd_client.cc  root_gahyd_server.cc
ruvendix/: stl_map.cpp  template.cpp
showmethecode/YSLog/: Makefile  YSLog.dsp  YSLog.dsw  YSLog.ncb  YSLog.opt  YSLog.plg
showmethecode/YSLog/h/: LogListener.h  LogPublisher.h  LogSource.h  LoggingEvent.h  Portability.h  SimpleLogSink.h
showmethecode/YSLog/src/: LogSource.cpp  Main.cpp  SimpleLogSink.cpp
uhdresbook/: Makefile  add_purshun.cc  list_peepuhl.cc  uhdresbook.proto
yawrz/: Makefile  Makefile.tbl
yawrz/inc/: yawrz.h
yawrz/src/: yawrz_cli_main.cpp  yawrz_cli_server.cpp  yawrz_server.sh  yawrz_tables.cpp  yawrz_tables_main.cpp
yawrz/tbl/: cwmp_parameters.csv  yawrz_devvar.sql
yawrz_git/: README.md
yawrz_git/src/: yawrz_cli.cpp  yawrz_cli_main.cpp  yawrz_command.cpp  yawrz_parameter.cpp  yawrz_server.cpp  yawrz_server_main.cpp  yawrz_version.cpp
yawrz_git/tbl/: cwmp_parameters.proto  openbts_tables.sql
(+216 files in other folders)
